Fixed an error (not showing current sonde)
* Added better color breakdown on nearby sondes (obsoletes a setting from config, see the example)

--- a/web/style.css
+++ b/web/style.css
@@ -1,7 +1,6 @@
 @charset "utf-8";
 @import url("https://fonts.googleapis.com/css?family=Mukta");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
-
 * {
 	box-sizing: border-box;
 }
@@ -133,20 +132,19 @@ table.blueTable thead th {
 	font-weight: bold;
 	color: rgb(255, 255, 255);
 	border-left: 1px solid rgb(208, 228, 245);
-	border-width:thin;
+	border-width: thin;
 }
 table.blueTable thead th:first-child {
 	border-left: none;
 	border-top: none;
 }
-
 table.blueTable tfoot {
 	font-size: 14px;
 	font-weight: bold;
 	color: rgb(255, 255, 255);
 	background: linear-gradient(rgb(220, 235, 247) 0%, rgb(212, 230, 246) 66%, rgb(208, 228, 245) 100%);
 	border-top: 1px solid #ccc;
-	border-top-width:thin;
+	border-top-width: thin;
 }
 table.blueTable tfoot td {
 	font-size: 14px;
@@ -198,9 +196,20 @@ table.blueTable tfoot .links a {
 .bold {
 	font-weight: bold;
 }
-.sondeisclose {
+.sondeisclose1 {
+	font-weight: bold;
+	color: #00A40D;
+}
+.sondeisclose2 {
+	font-weight: bold;
+	color: #D98700;
+}
+.sondeisclose3 {
 	font-weight: bold;
 	color: rgb(255, 0, 4);
+}
+.sondeisfar {
+	color: #000;
 }
 div.myTable {
 	width: 100%;
@@ -229,9 +238,9 @@ div.myTable2 {
 }
 .divTableRow {
 	display: table-row;
-	border-bottom-style:solid;
-	border-bottom-width:thin;
-	border-bottom-color:#CCCCCC;
+	border-bottom-style: solid;
+	border-bottom-width: thin;
+	border-bottom-color: #CCCCCC;
 }
 .divTableHeading {
 	display: table-header-group;
@@ -248,16 +257,13 @@ div.myTable2 {
 .divTableBody {
 	display: table-row-group;
 }
-
 .divTableRow:nth-child(2n) {
 	display: table-row;
 	background-color: rgb(208, 228, 245);
 }
-
 .divTableRow:last-child {
 	border-bottom: none;
 }
-
 #adir i {
 	display: inline-block;
 	width: 0;
@@ -272,7 +278,7 @@ div.myTable2 {
 	box-shadow: 3px 3px 5px -1px #bee2f9;
 	background: -webkit-gradient( linear, left top, left bottom, color-stop(0.05, #63b8ee), color-stop(1, #468ccf) );
 	background: -moz-linear-gradient( center top, #63b8ee 5%, #468ccf 100% );
- 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#63b8ee', endColorstr='#468ccf');
+ filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#63b8ee', endColorstr='#468ccf');
 	background-color: #63b8ee;
 	-webkit-border-top-left-radius: 15px;
 	-moz-border-radius-topleft: 15px;
@@ -303,74 +309,68 @@ div.myTable2 {
 .linkbutton:hover {
 	background: -webkit-gradient( linear, left top, left bottom, color-stop(0.05, #468ccf), color-stop(1, #63b8ee) );
 	background: -moz-linear-gradient( center top, #468ccf 5%, #63b8ee 100% );
- 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#468ccf', endColorstr='#63b8ee');
+ filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#468ccf', endColorstr='#63b8ee');
 	background-color: #468ccf;
 }
 .linkbutton:active {
 	position: relative;
 	top: 1px;
 }
-
 .blink {
-    animation: blink 2s steps(5, start) infinite;
-    -webkit-animation: blink 1s steps(5, start) infinite;
+	animation: blink 2s steps(5, start) infinite;
+	-webkit-animation: blink 1s steps(5, start) infinite;
 }
-
-
 .myButton {
 	margin: 5px;
-	-moz-box-shadow:inset 0px 1px 0px 0px #97c4fe;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #97c4fe;
-	box-shadow:inset 0px 1px 0px 0px #97c4fe;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #3d94f6), color-stop(1, #1e62d0));
-	background:-moz-linear-gradient(top, #3d94f6 5%, #1e62d0 100%);
-	background:-webkit-linear-gradient(top, #3d94f6 5%, #1e62d0 100%);
-	background:-o-linear-gradient(top, #3d94f6 5%, #1e62d0 100%);
-	background:-ms-linear-gradient(top, #3d94f6 5%, #1e62d0 100%);
-	background:linear-gradient(to bottom, #3d94f6 5%, #1e62d0 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#3d94f6', endColorstr='#1e62d0',GradientType=0);
-	background-color:#3d94f6;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	border:1px solid #337fed;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:15px;
-	font-weight:bold;
-	padding:6px 24px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #1570cd;
+	-moz-box-shadow: inset 0px 1px 0px 0px #97c4fe;
+	-webkit-box-shadow: inset 0px 1px 0px 0px #97c4fe;
+	box-shadow: inset 0px 1px 0px 0px #97c4fe;
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #3d94f6), color-stop(1, #1e62d0));
+	background: -moz-linear-gradient(top, #3d94f6 5%, #1e62d0 100%);
+	background: -webkit-linear-gradient(top, #3d94f6 5%, #1e62d0 100%);
+	background: -o-linear-gradient(top, #3d94f6 5%, #1e62d0 100%);
+	background: -ms-linear-gradient(top, #3d94f6 5%, #1e62d0 100%);
+	background: linear-gradient(to bottom, #3d94f6 5%, #1e62d0 100%);
+ filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#3d94f6', endColorstr='#1e62d0', GradientType=0);
+	background-color: #3d94f6;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	border-radius: 6px;
+	border: 1px solid #337fed;
+	display: inline-block;
+	cursor: pointer;
+	color: #ffffff;
+	font-family: Arial;
+	font-size: 15px;
+	font-weight: bold;
+	padding: 6px 24px;
+	text-decoration: none;
+	text-shadow: 0px 1px 0px #1570cd;
 }
 .myButton:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #1e62d0), color-stop(1, #3d94f6));
-	background:-moz-linear-gradient(top, #1e62d0 5%, #3d94f6 100%);
-	background:-webkit-linear-gradient(top, #1e62d0 5%, #3d94f6 100%);
-	background:-o-linear-gradient(top, #1e62d0 5%, #3d94f6 100%);
-	background:-ms-linear-gradient(top, #1e62d0 5%, #3d94f6 100%);
-	background:linear-gradient(to bottom, #1e62d0 5%, #3d94f6 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#1e62d0', endColorstr='#3d94f6',GradientType=0);
-	background-color:#1e62d0;
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #1e62d0), color-stop(1, #3d94f6));
+	background: -moz-linear-gradient(top, #1e62d0 5%, #3d94f6 100%);
+	background: -webkit-linear-gradient(top, #1e62d0 5%, #3d94f6 100%);
+	background: -o-linear-gradient(top, #1e62d0 5%, #3d94f6 100%);
+	background: -ms-linear-gradient(top, #1e62d0 5%, #3d94f6 100%);
+	background: linear-gradient(to bottom, #1e62d0 5%, #3d94f6 100%);
+ filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#1e62d0', endColorstr='#3d94f6', GradientType=0);
+	background-color: #1e62d0;
 }
 .myButton:active {
-	position:relative;
-	top:1px;
+	position: relative;
+	top: 1px;
 }
-
-
-@keyframes blink {
-    to {
-      visibility: hidden;
-    }
+ @keyframes blink {
+ to {
+ visibility: hidden;
+}
 }
 @-webkit-keyframes blink {
-    to {
-      visibility: hidden;
-    }
+ to {
+ visibility: hidden;
 }
-
+}
 
 @media only screen and (max-width: 1000px) {
 .column {
